# unifly

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  cicd.yml  docs.yml  release.yml
agents/: unifly-network-manager.md
commands/: unifly-audit.md  unifly-status.md
crates/unifi-api/: Cargo.toml
crates/unifi-api/openapi/: 10.1.84.json
crates/unifi-api/src/: auth.rs  error.rs  lib.rs  transport.rs  websocket.rs
crates/unifi-api/src/integration/: client.rs  types.rs
crates/unifi-api/src/legacy/: auth.rs  client.rs  clients.rs  devices.rs  events.rs  mod.rs  stats.rs  system.rs
crates/unifi-api/tests/: integration_client_test.rs  legacy_client_test.rs
crates/unifi-cli/: Cargo.toml  build.rs
crates/unifi-cli/src/: cli.rs  config.rs  error.rs  main.rs  output.rs
crates/unifi-cli/src/commands/: acl.rs  admin.rs  alarms.rs  clients.rs  config_cmd.rs  countries.rs  devices.rs  dns.rs  dpi.rs  events.rs  firewall.rs  hotspot.rs  mod.rs  networks.rs  radius.rs  sites.rs  stats.rs  system.rs  traffic_lists.rs  util.rs  vpn.rs  wans.rs  wifi.rs
crates/unifi-cli/tests/: cli_test.rs
crates/unifi-config/: Cargo.toml
crates/unifi-config/src/: lib.rs
crates/unifi-core/: Cargo.toml
crates/unifi-core/src/: command.rs  config.rs  controller.rs  convert.rs  error.rs  lib.rs
crates/unifi-core/src/command/: mod.rs  requests.rs
crates/unifi-core/src/model/: client.rs  common.rs  device.rs  dns.rs  entity_id.rs  event.rs  firewall.rs  hotspot.rs  legacy_resources.rs  mod.rs  network.rs  site.rs  wifi.rs
crates/unifi-core/src/store/: collection.rs  data_store.rs  mod.rs  refresh.rs
crates/unifi-core/src/stream/: filter.rs
crates/unifi-tui/: Cargo.toml
crates/unifi-tui/src/: action.rs  app.rs  component.rs  data_bridge.rs  event.rs  main.rs  screen.rs  theme.rs  tui.rs
crates/unifi-tui/src/screens/: clients.rs  dashboard.rs  devices.rs  events.rs  firewall.rs  mod.rs  networks.rs  onboarding.rs  settings.rs  stats.rs  topology.rs
crates/unifi-tui/src/widgets/: bytes_fmt.rs  mod.rs  signal_bars.rs  status_indicator.rs
crates/unifly/: Cargo.toml  build.rs
crates/unifly-api/: Cargo.toml  README.md
crates/unifly-api/src/: auth.rs  error.rs  lib.rs  transport.rs  websocket.rs
crates/unifly-api/src/integration/: client.rs  mod.rs
crates/unifly-api/src/legacy/: client.rs  clients.rs  devices.rs  events.rs  models.rs  sites.rs  stats.rs  system.rs
crates/unifly-api/tests/: integration_client_test.rs  legacy_client_test.rs
crates/unifly-config/: Cargo.toml
crates/unifly-config/src/: lib.rs
crates/unifly-core/: Cargo.toml  README.md
crates/unifly-core/src/: config.rs  controller.rs  convert.rs  error.rs  lib.rs
crates/unifly-core/src/command/: mod.rs  requests.rs
crates/unifly-core/src/model/: client.rs  device.rs  firewall.rs  hotspot.rs  mod.rs  network.rs  supporting.rs  wifi.rs
crates/unifly-core/src/store/: collection.rs  data_store.rs  mod.rs  refresh.rs
crates/unifly-core/src/stream/: filter.rs  mod.rs
crates/unifly-tui/: Cargo.toml
crates/unifly-tui/src/: action.rs  app.rs  data_bridge.rs  event.rs  main.rs  screen.rs  theme.rs
crates/unifly-tui/src/screens/: clients.rs  dashboard.rs  devices.rs  events.rs  firewall.rs  mod.rs  networks.rs  onboarding.rs  settings.rs  stats.rs  topology.rs
crates/unifly-tui/src/widgets/: bytes_fmt.rs  signal_bars.rs  status_indicator.rs  sub_tabs.rs
crates/unifly/src/: cli.rs  config.rs  error.rs  main.rs
crates/unifly/src/commands/: acl.rs  admin.rs  alarms.rs  clients.rs  config_cmd.rs  countries.rs  devices.rs  dns.rs  dpi.rs  events.rs  firewall.rs  hotspot.rs  mod.rs  networks.rs  radius.rs  sites.rs  stats.rs  system.rs  traffic_lists.rs  util.rs  vpn.rs  wans.rs  wifi.rs
crates/unifly/tests/: cli_test.rs
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/architecture/: api-surface.md  crates.md  data-flow.md  index.md
docs/guide/: authentication.md  configuration.md  index.md  installation.md  quick-start.md
docs/reference/: cli.md  tui.md
skills/unifly/: SKILL.md
skills/unifly/examples/: config.toml
skills/unifly/references/: commands.md  concepts.md  workflows.md
