[workspace]
members = [
    "crates/unifi-api",
    "crates/unifi-core",
    "crates/unifi-cli",
    "crates/unifi-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blisshostings/unifi-cli"
homepage = "https://github.com/blisshostings/unifi-cli"
authors = ["Bliss"]

[workspace.dependencies]
# ── Internal crates ──
unifi-api  = { path = "crates/unifi-api", version = "0.1.0" }
unifi-core = { path = "crates/unifi-core", version = "0.1.0" }

# ── Async runtime ──
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }

# ── HTTP & networking ──
reqwest = { version = "0.12", default-features = false, features = [
    "json", "cookies", "rustls-tls", "gzip", "brotli",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = { version = "2", features = ["serde"] }

# ── Serialization ──
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# ── Error handling ──
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
color-eyre = "0.6"

# ── CLI framework ──
clap = { version = "4", features = ["derive", "env", "wrap_help", "string", "color"] }
clap_complete = "4"
clap_mangen = "0.2"

# ── CLI utilities ──
dialoguer = "0.11"
indicatif = "0.17"
rpassword = "7"

# ── TUI framework ──
ratatui = { version = "0.30", features = ["crossterm", "serde"] }
ratatui-macros = "0.7"
crossterm = { version = "0.29", features = ["event-stream"] }
tachyonfx = "0.23"
tui-input = "0.11"
tui-scrollview = "0.6"
tui-widget-list = "0.15"
tui-tree-widget = "0.24"
tui-popup = "0.7"
throbber-widgets-tui = "0.10"

# ── TUI utilities ──
better-panic = "0.3"
human-panic = "2"
bytes = "1"
bytesize = "1"
humantime = "2"

# ── Configuration ──
figment = { version = "0.10", features = ["toml", "env"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
directories = "6"

# ── Output formatting (CLI) ──
tabled = { version = "0.17", features = ["derive"] }
owo-colors = "4"

# ── Logging / tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ── Time ──
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# ── Utilities ──
uuid = { version = "1", features = ["serde", "v4"] }
secrecy = { version = "0.10", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
dashmap = "6"
arc-swap = "1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
indexmap = "2"

# ── Code generation (build) ──
progenitor = "0.9"
progenitor-client = "0.9"
openapiv3 = "2"

# ── Dev / testing ──
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"

# ── Distribution metadata ──
[workspace.metadata.dist]
cargo-dist-version = "0.27"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
tap = "blisshostings/homebrew-tap"

# ── Profiles ──
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package.insta]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
