[workspace]
members = [
    "crates/unifly-api",
    "crates/unifly-core",
    "crates/unifly-config",
    "crates/unifly",
    "crates/unifly-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/hyperb1iss/unifly"
homepage = "https://github.com/hyperb1iss/unifly"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]

[workspace.dependencies]
# ── Internal crates ──
unifly-api    = { path = "crates/unifly-api", version = "0.1.0" }
unifly-core   = { path = "crates/unifly-core", version = "0.1.0" }
unifly-config = { path = "crates/unifly-config", version = "0.1.0" }

# ── Async runtime ──
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }

# ── HTTP & networking ──
reqwest = { version = "0.12", default-features = false, features = [
    "json", "cookies", "rustls-tls", "gzip", "brotli",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = { version = "2", features = ["serde"] }

# ── Serialization ──
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# ── Error handling ──
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
color-eyre = "0.6"

# ── CLI framework ──
clap = { version = "4", features = ["derive", "env", "wrap_help", "string", "color"] }
clap_complete = "4"
clap_mangen = "0.2"

# ── CLI utilities ──
dialoguer = "0.11"
indicatif = "0.17"
rpassword = "7"

# ── TUI framework ──
ratatui = { version = "0.30", features = ["crossterm", "serde"] }
ratatui-macros = "0.7"
crossterm = { version = "0.29", features = ["event-stream"] }
tachyonfx = "0.23"
tui-input = "0.11"
tui-scrollview = "0.6"
tui-widget-list = "0.15"
tui-tree-widget = "0.24"
tui-popup = "0.7"
throbber-widgets-tui = "0.10"

# ── TUI utilities ──
better-panic = "0.3"
human-panic = "2"
bytes = "1"
bytesize = "1"
humantime = "2"

# ── Configuration ──
figment = { version = "0.10", features = ["toml", "env"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
directories = "6"

# ── Output formatting (CLI) ──
tabled = { version = "0.17", features = ["derive"] }
owo-colors = "4"

# ── Logging / tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ── Time ──
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# ── Utilities ──
uuid = { version = "1", features = ["serde", "v4"] }
secrecy = { version = "0.10", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
dashmap = "6"
arc-swap = "1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
indexmap = "2"

# ── Dev / testing ──
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"

# ── Workspace lints ──
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Base lint groups
all = { level = "deny", priority = 0 }
style = { level = "warn", priority = 1 }
perf = { level = "deny", priority = 1 }

# Pedantic lints
pedantic = { level = "deny", priority = 10 }

# Documentation allowances
missing_errors_doc = { level = "allow", priority = 20 }
missing_panics_doc = { level = "allow", priority = 20 }
missing_safety_doc = { level = "allow", priority = 20 }
missing_docs_in_private_items = { level = "allow", priority = 20 }

# Code style allowances — pragmatic reasons
module_name_repetitions = { level = "allow", priority = 21 }
significant_drop_tightening = { level = "allow", priority = 21 }
must_use_candidate = { level = "allow", priority = 21 }
return_self_not_must_use = { level = "allow", priority = 21 }
doc_markdown = { level = "allow", priority = 21 }

# Numeric casting and conversion warnings
cast_precision_loss = { level = "warn", priority = 22 }
cast_possible_truncation = { level = "warn", priority = 22 }
cast_sign_loss = { level = "warn", priority = 22 }
as_conversions = { level = "warn", priority = 22 }

# Safety-critical denials
out_of_bounds_indexing = { level = "deny", priority = 30 }
enum_glob_use = { level = "deny", priority = 30 }
unwrap_used = { level = "deny", priority = 30 }
undocumented_unsafe_blocks = { level = "deny", priority = 30 }

# Development/debugging lints
dbg_macro = { level = "warn", priority = 31 }
todo = { level = "warn", priority = 31 }

# Async-specific lints
future_not_send = { level = "warn", priority = 32 }

# String and collection efficiency
implicit_clone = { level = "warn", priority = 33 }
inefficient_to_string = { level = "warn", priority = 33 }
string_lit_as_bytes = { level = "warn", priority = 33 }

# Code complexity
too_many_lines = { level = "warn", priority = 34 }
cognitive_complexity = { level = "warn", priority = 34 }

# Error handling
result_large_err = { level = "warn", priority = 35 }

# Modern Rust idioms
manual_let_else = { level = "warn", priority = 36 }
redundant_else = { level = "warn", priority = 36 }
semicolon_if_nothing_returned = { level = "warn", priority = 36 }
cloned_instead_of_copied = { level = "warn", priority = 36 }
flat_map_option = { level = "warn", priority = 36 }
from_iter_instead_of_collect = { level = "warn", priority = 36 }
needless_pass_by_value = { level = "warn", priority = 36 }
trivially_copy_pass_by_ref = { level = "warn", priority = 36 }
if_not_else = { level = "warn", priority = 36 }
match_same_arms = { level = "warn", priority = 36 }
needless_continue = { level = "warn", priority = 36 }

# Cargo — allow transitive dep duplication
multiple_crate_versions = { level = "allow", priority = 40 }

# ── Distribution metadata ──
[workspace.metadata.dist]
cargo-dist-version = "0.27"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
tap = "hyperb1iss/homebrew-tap"

# ── Profiles ──
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package.insta]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
