[package]
name = "unifi-api"
description = "Async Rust client for the Ubiquiti UniFi controller API (Integration + Legacy)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["unifi", "ubiquiti", "networking", "api-client"]
categories = ["api-bindings", "network-programming"]

[lints]
workspace = true

[dependencies]
reqwest           = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt"] }
tokio-tungstenite = { workspace = true }
tokio-util        = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }
secrecy           = { workspace = true }
futures-util      = { workspace = true }
async-stream      = { workspace = true }

[dev-dependencies]
wiremock    = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
tokio-test  = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }
