[package]
name = "unifi-cli"
description = "Command-line interface for managing UniFi network controllers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "unifi"
path = "src/main.rs"

[dependencies]
unifi-core  = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
clap        = { workspace = true }
clap_complete = { workspace = true }
miette      = { workspace = true }
tabled      = { workspace = true }
owo-colors  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
figment     = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
directories = { workspace = true }
dialoguer   = { workspace = true }
indicatif   = { workspace = true }
rpassword   = { workspace = true }
secrecy     = { workspace = true }
thiserror   = { workspace = true }
url         = { workspace = true }

[build-dependencies]
clap_mangen = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }
wiremock    = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }

[package.metadata.dist]
dist = true
