[package]
name = "unifi-core"
description = "Business logic and shared services for unifi-cli tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unifi-api    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
arc-swap     = { workspace = true }
futures-core = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
secrecy      = { workspace = true }
url          = { workspace = true }
strum        = { workspace = true }
bytes        = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-test = { workspace = true }
insta      = { workspace = true }
