[package]
name = "unifly-api"
description = "Async Rust client for the Ubiquiti UniFi controller API (Integration + Legacy)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["unifi", "ubiquiti", "networking", "api-client", "async"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/unifly-api"

[lints]
workspace = true

[dependencies]
reqwest           = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt"] }
tokio-tungstenite = { workspace = true }
tokio-util        = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }
secrecy           = { workspace = true }
futures-util      = { workspace = true }
async-stream      = { workspace = true }
rustls             = { version = "0.23", default-features = false }
rustls-pki-types   = "1"

[dev-dependencies]
wiremock    = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
tokio-test  = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }
