[package]
name = "unifly-config"
description = "Shared configuration types, loading, and credential resolution for UniFi tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
unifly-core  = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
figment      = { workspace = true }
keyring      = { workspace = true }
directories  = { workspace = true }
secrecy      = { workspace = true }
url          = { workspace = true }
thiserror    = { workspace = true }
