[package]
name = "unifly-core"
description = "Business logic and shared services for unifly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["unifi", "ubiquiti", "networking", "controller", "async"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/unifly-core"

[lints]
workspace = true

[dependencies]
unifly-api   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
arc-swap     = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
secrecy      = { workspace = true }
url          = { workspace = true }
strum        = { workspace = true }
bytes        = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-test = { workspace = true }
insta      = { workspace = true }
