[package]
name = "unifly-tui"
description = "Terminal UI for monitoring and managing UniFi network controllers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "unifly-tui"
path = "src/main.rs"

[dependencies]
unifi-core           = { workspace = true }
unifi-config         = { workspace = true }
tokio                = { workspace = true, features = ["full"] }
serde                = { workspace = true }
serde_json           = { workspace = true }
clap                 = { workspace = true }
ratatui              = { workspace = true }
ratatui-macros       = { workspace = true }
crossterm            = { workspace = true }
tachyonfx            = { workspace = true }
tui-input            = { workspace = true }
tui-scrollview       = { workspace = true }
tui-widget-list      = { workspace = true }
tui-tree-widget      = { workspace = true }
tui-popup            = { workspace = true }
throbber-widgets-tui = { workspace = true }
color-eyre           = { workspace = true }
better-panic         = { workspace = true }
human-panic          = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
tracing-appender     = { workspace = true }
chrono               = { workspace = true }
tokio-util           = { workspace = true }
futures              = { workspace = true }
bytesize             = { workspace = true }
humantime            = { workspace = true }
indexmap              = { workspace = true }
secrecy              = { workspace = true }
url                  = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
tempfile          = { workspace = true }
pretty_assertions = { workspace = true }
uuid              = { workspace = true }

[package.metadata.dist]
dist = true
